--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,4 @@
 @charset 'UTF-8';
-/*common*/
-body {
-    margin:25px; 
-    font:11px Verdana,Arial; 
-    background:#eee;
-}
-
-.block {
-   font-size: 14px;
-   line-height: 18px;
-   padding: 0 0 0 15px;
-   margin: 0 0 18px;
-   border-left: 5px solid #eeeeee;
-}
-
-/*footer*/
-/*html, body {
-    height: 100%;
-}
-.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -80px;
-}
-.footer, .push {
-    height: 80px; 
-}*/
 
 /* editor */
 .me_styled-select_edit select {
@@ -34,22 +6,89 @@ body {
    overflow: hidden;
    font-size: 12px;
    border: 1px solid #ccc;
-/*    width: 200px; */
-/*    padding: 5px; */
-/*    height: 34px; */
 }
 
-.me_styled-input input[type="text"]
-{
-  border-right: #ccc 1px solid;
-  border-top: #ccc 1px solid;
-  border-left: #ccc 1px solid;
-  border-bottom: #ccc 1px solid;
-  background: #F4F5E1;
-
-/*  padding-right: 2px;
-  padding-left: 2px;
-  padding-bottom: 2px;
-  padding-top: 2px;*/
+/* bootstrap */
+.btn {
+  padding: 2px 6px;
+  font-size: 12px;
+  line-height: 10px; 
 }
 
+/* rows style */
+.table th, .table td {
+    padding: 2px;
+    line-height: 13px;
+    text-align: left;
+    vertical-align: middle;
+    border-top: 1px solid rgb(221, 221, 221);
+    font-size: 12px;
+}
+
+tr {
+    border-top: 1px solid rgb(221, 221, 221);
+}
+    
+    
+    
+/* global upload bar */
+.span5 {
+    width: 380px;
+}
+
+
+
+/* no margin for upload shit */
+.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+    width: 97%;
+}
+
+.progress {
+    height: 15px;
+    margin-bottom: 2px;
+}
+
+
+
+
+
+/*common*/
+.block {
+   font-size: 13px;
+/*    line-height: 18px; */
+   padding: 0 0 0 15px;
+/*    margin: 0 0 18px; */
+   border-left: 5px solid #eeeeee;
+}
+
+body {
+    margin:2px; 
+/*     font:11px Verdana,Arial;  */
+    font-size: 100%;
+    background:#eee;
+/*     line-height: 10px; */
+}
+
+h1 {
+    font-size: 200%;
+}
+h3 {
+    font-size: 160%;
+}
+.page-header {
+    padding-bottom: 9px;
+    margin: 0px 0px 0px;
+/*     border-bottom: 1px solid rgb(238, 238, 238); */
+}
+
+/*Notes and shit*/
+.well {
+    min-height: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(245, 245, 245);
+    border: 1px solid rgb(227, 227, 227);
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
+    font-size: 80%;
+}
