--- a/css/style.css
+++ b/css/style.css
@@ -96,13 +96,15 @@ div#progress_bar {
 
 /* plugins links */
 div.ui-dialog > * { font-size: 60%; }
-textarea#textarea_edit_plugin {
+textarea.css_textarea_edit_plugin {
     margin-bottom:1px; 
     width:99%;
-    height:99%; 
+    height:95%; 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    resize: none;
+    line-height: 14px
 }
 
 ul#change_with_links_plugins {
@@ -127,4 +129,28 @@ a.link_plugin {
      padding-right:5px;
      padding-top:2px; 
     width:20px;
+}
+
+/*dialog resize*/
+.ui-dialog .ui-dialog-buttonpane  {
+    margin: 0em 0em 0em 0;
+}
+.ui-dialog .ui-dialog-content {
+    padding: 0em 0em;
+}
+.ui-dialog .ui-dialog-titlebar {
+  line-height: 15px; 
+  padding: 0.3em 0.3em;
+/*     position: relative; */
+}
+
+.select_rate {
+  display: inline;
+  width: 30px;
+  font: 12px Arial, sans-serif;
+  font-size: 90%;
+}
+
+p {
+margin: 0 0 0 0;
 }
