--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,6 @@
   line-height: 10px; 
 }
 
-/* rows style */
-.table th, .table td {
-    padding: 2px;
-    line-height: 13px;
-    text-align: left;
-    vertical-align: middle;
-    border-top: 1px solid rgb(221, 221, 221);
-    font-size: 12px;
-}
-
-tr {
-    border-top: 1px solid rgb(221, 221, 221);
-}
-    
 /* global upload bar */
 .span5 {
     width: 380px;
@@ -94,35 +80,6 @@ div#progress_bar {
 	overflow: hidden;
 } 
 
-/* plugins links */
-div.ui-dialog > * { font-size: 60%; }
-textarea.css_textarea_edit_plugin {
-    margin-bottom:1px; 
-    width:99%;
-    height:95%; 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    resize: none;
-    line-height: 14px
-}
-
-ul#change_with_links_plugins {
-   list-style-type: none;
-}
-ul#change_with_links_plugins li {
-/*    border:1px solid #BBBBBB; */
-   float:left;
-   margin-right:7px;
-}
-
-#change_with_links_plugins { font-size: 90%; } 
-a.link_plugin {
-  color: green;
-  font-weight:500;
-  cursor: pointer; cursor: hand
-}
-
 .help_image {
     height:20px;
     float:right;
@@ -131,9 +88,17 @@ a.link_plugin {
     width:20px;
 }
 
+.switch_selector {
+    height:20px;
+    width:20px;
+    float:right;
+    padding-right:5px;
+    padding-top:2px; 
+}
+
 /*dialog resize*/
-.ui-dialog .ui-dialog-buttonpane  {
-    margin: 0em 0em 0em 0;
+.ui-dialog .ui-dialog-buttonpane button {
+    margin: 0em .3em 0em 0;
 }
 .ui-dialog .ui-dialog-content {
     padding: 0em 0em;
@@ -144,13 +109,116 @@ a.link_plugin {
 /*     position: relative; */
 }
 
-.select_rate {
-  display: inline;
-  width: 30px;
-  font: 12px Arial, sans-serif;
-  font-size: 90%;
+/* plugins links */
+ul#change_with_links_plugins {
+   list-style-type: none;
+   font-size: 90%;
+}
+ul#change_with_links_plugins li {
+/*    border:1px solid #BBBBBB; */
+   float:left;
+   margin-right:7px;
+}
+a.link_plugin {
+  color: green;
+  font-weight:500;
+  cursor: pointer; cursor: hand
 }
 
-p {
-margin: 0 0 0 0;
+
+div.ui-dialog > * { 
+  font-size: 64%; 
 }
+/* keytool -keysize 2048 -genkey -alias frontend1.somesite.address.com -keyalg RSA -keystore mind_private_certificate.keystore */
+textarea.css_textarea_edit_plugin {
+    margin-bottom:1px; 
+    width:99%;
+    height:95%; 
+    line-height: 14px
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    resize: none;
+    box-shadow: none;
+}
+
+.select_rate {
+  display: inline;
+  width: 40px;
+  font: 12px Arial, sans-serif;
+  font-size: 99%;
+}
+
+p { margin: 0 0 0 0;}
+
+/* rows style */
+.table th, .table td {
+    padding: 2px;
+    line-height: 13px;
+    text-align: left;
+    vertical-align: middle;
+    border-top: 1px solid rgb(221, 221, 221);
+    font-size: 12px;
+}
+
+table.tableMain {
+  cellspacing:0;
+  cellpadding:0;
+  border:0;
+  width:99%;
+}
+
+tr {
+    border-top: 1px solid rgb(221, 221, 221);
+}
+    
+/*td.start td.cancel td.delete {
+  float: right;
+  text-align:right;
+  display: inline;
+}*/
+
+input[type="text"] {
+  height: 20px;
+  padding: 0px 0px;
+  margin-bottom: 0px;
+  font-size: 14px;
+  line-height: 14px;
+  /* color: #555; */
+  vertical-align: middle;
+  border-radius: 4px;
+}
+
+.defaultText { 
+  width:100%;
+}
+.defaultTextActive { 
+/*   color: #a1a1a1;  */
+  font-style: italic; 
+}
+
+.my_selector {
+    vertical-align:top;
+}
+.selector {
+  float:left;
+  width:80%;
+/*   clear:both; */
+}
+
+.ui-menu .ui-menu-item a {
+font-size: 14px;
+/* text-decoration:blink; */
+/* display: block; */
+/* padding: 0 0; */
+/* line-height: 1.5; */
+/* zoom: 0; */
+/* font-weight: normal; */
+}
+
+.link_help_me {
+/*   float:left; */
+  vertical-align:middle;
+/*   clear:both; */
+}
+
